[tool.poetry]
name = "stylesage-coupons"
version = "0.1.0"
description = ""
authors = ["Jesus Lorenzo"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^1.4.3"
numpy = "^1.23.1"
nltk = "^3.7"
pke = {git = "https://github.com/boudinfl/pke.git"}
streamlit = "^1.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
